# rust-server

./: .env  Cargo.toml
migr/: down.sql  up.sql
migrations/2022-08-28-193506_init/: down.sql  up.sql
migrations/2022-09-03-193836_add_username/: down.sql  up.sql
migrations/2022-09-03-200536_make_email_unique_and_not_null/: down.sql  up.sql
migrations/2022-09-03-201947_make_text_not_null/: down.sql  up.sql
src/: main.rs  schema.rs
src/controllers/: images_controller.rs  mod.rs  post_controller.rs  user_controller.rs
src/entities/: post.rs  user.rs
src/services/: images_service.rs  mod.rs  post_service.rs  user_service.rs
src/utilities/: mod.rs
