[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
